package com.design.patterns.BehaviouralPatterns.StatePatternBehavioural.TrafficLightExample;

public enum TrafficLightColor {
    RED,
    GREEN,
    YELLOW,
    BLINKING
}
